modify: css style

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WDD 231 - Dynamic Web Fundamentals - Sehee Jang</title>
+    <title>WDD 231 - Web Frontend Development I - Sehee Jang</title>
     <meta
       name="description"
-      content="WDD131 - Dynamic Web Fundamentals | Sehee Jang | Homepage"
+      content="WDD131 - Web Frontend Development I | Sehee Jang | Homepage"
     />
     <meta name="author" content="Sehee Jang" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
@@ -17,106 +17,76 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <script src="scripts/script.js" defer></script>
     <script src="scripts/getdates.js" defer></script>
+  </head>
   </head>
   <body>
     <header>
-      <h1>WDD 231 - Sehee Jang</h1>
+      <h1>
+        <img
+          src="images/profile_drawing.jpg"
+          alt="Profile Image"
+          width="100"
+          class="about-img"
+        />
+        WDD 231 - Sehee Jang
+      </h1>
+      <button class="hamburger" aria-label="Toggle navigation">&#9776;</button>
       <nav>
+        <a href="/">Home</a>
+        <a href="/">Chamber</a>
+        <a href="https://github.com/Sehee-Jang">GitHub Profile</a>
         <a href="https://www.linkedin.com/in/seheejang/">LinkedIn</a>
-        <a href="https://byui.instructure.com/">I-Learn</a>
-        <a
-          href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7"
-          >Scripture</a
-        >
-        <a href="#">Final Project</a>
       </nav>
     </header>
 
     <main>
-      <section class="card">
-        <h2>About Me</h2>
+      <section class="card content1">
+        <h2>Course Work</h2>
 
         <div class="card-cont">
-          <div class="about">
-            <p class="about-desc">
-              My name is Sehee. I lived in the U.S for about 5 years, and I'm
-              currently living in Korea. I love travel, working out, and learn
-              new things. I look forward to learning new languages in this
-              semester!
-            </p>
-            <img
-              src="images/profile_drawing.jpg"
-              alt="Profile Image"
-              width="180"
-              class="about-img"
-            />
-          </div>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </section>
 
+      <section class="card content2">
+        <h2>South Korea</h2>
+        <div class="card-cont">
           <div class="korea">
-            <h3>South Korea</h3>
             <div class="img">
               <img
-                src="images/flag-south-korea.png"
-                alt="South Korea Flag"
+                src="images/seoul-small.webp"
+                alt="Seoul, South Korea"
                 width="200"
               />
+              <p>Lotte World Tower, Seoul</p>
             </div>
-            <p class="korea_desc">
-              South Korea, an East Asian nation on the southern half of the
-              Korean Peninsula, shares one of the world’s most heavily
-              militarized borders with North Korea. It’s equally known for its
-              green, hilly countryside dotted with cherry trees and
-              centuries-old Buddhist temples, plus its coastal fishing villages,
-              sub-tropical islands and high-tech cities such as Seoul, the
-              capital.
-            </p>
           </div>
         </div>
       </section>
 
-      <section class="card">
-        <h2>Top sights in South Korea</h2>
+      <section class="card content3">
+        <h2>Web and Computer Programming Certificate</h2>
 
         <div class="card-cont">
-          <ul>
-            <li>
-              <a
-                href="https://english.visitkorea.or.kr/svc/contents/infoHtmlView.do?vcontsId=136644"
-                >Jeju Island</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://english.visitkorea.or.kr/svc/whereToGo/locIntrdn/locIntrdnList.do?vcontsId=111127&menuSn=351"
-                >Nami Island</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://english.visitkorea.or.kr/svc/whereToGo/locIntrdn/locIntrdnList.do?vcontsId=97932&menuSn=351"
-                >Bukchon Hanok Village</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://english.visitkorea.or.kr/svc/whereToGo/locIntrdn/locIntrdnList.do?vcontsId=94002&menuSn=351"
-                >Cheonggyecheon</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://english.visitkorea.or.kr/svc/whereToGo/locIntrdn/locIntrdnList.do?vcontsId=67162&menuSn=351"
-                >Dongdaemun Design Plaza (DDP)</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://english.visitkorea.or.kr/svc/whereToGo/locIntrdn/locIntrdnList.do?vcontsId=111053&menuSn=351"
-                >Haeundae Beach</a
-              >
-            </li>
-          </ul>
+          <div class="categories">
+            <div class="category">All</div>
+            <div class="category">CSE</div>
+            <div class="category">WDD</div>
+          </div>
+          <div class="classes">
+            <div class="class">CSE 110</div>
+            <div class="class">WDD 130</div>
+            <div class="class">CSE 111</div>
+            <div class="class">CSE 210</div>
+            <div class="class">WDD 131</div>
+            <div class="class">WDD 231</div>
+          </div>
         </div>
       </section>
     </main>
