--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
     />
     <meta name="author" content="Sehee Jang" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+
+    <!-- styles -->
     <link rel="stylesheet" href="styles/base.css" />
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap"
       rel="stylesheet"
     />
+
+    <!-- scripts -->
     <script src="scripts/script.js" defer></script>
     <script src="scripts/getdates.js" defer></script>
   </head>
-  </head>
+
   <body>
     <header>
       <h1>
