--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <!-- styles -->
     <link rel="stylesheet" href="styles/base.css" />
 
-    <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+    <!-- Google Font Preload -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" as="style" onload="this.rel='stylesheet'">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" onload="this.rel='stylesheet'">
+    <noscript>
+      <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    </noscript>
 
     <!-- scripts -->
     <script src="scripts/script.js" defer></script>
@@ -66,6 +69,7 @@
                 src="images/seoul-small.webp"
                 alt="Seoul, South Korea"
                 width="200"
+                loading="lazy"
               />
               <p>Lotte World Tower, Seoul</p>
             </div>
