--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <link rel="stylesheet" href="styles/base.css" />
 
     <!-- Google Font -->
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap");
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- scripts -->
     <script src="scripts/script.js" defer></script>
