--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
     <link rel="stylesheet" href="./styles/normalize.css" />
 
     <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- script -->
     <script src="scripts/getdates.js" defer></script>
@@ -65,7 +69,6 @@
                 src="images/seoul-small.webp"
                 alt="Seoul, South Korea"
                 width="200"
-                loading="lazy"
               />
               <p>Lotte World Tower, Seoul</p>
             </div>
