--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WDD 231 - Web Frontend Development I - Sehee Jang</title>
     <meta
@@ -33,9 +33,10 @@
     <header>
       <h1>
         <img
-          src="images/profile_drawing.jpg"
+          src="images/profile_drawing.webp"
           alt="Profile Image"
           width="100"
+          height="100"
           class="about-img"
         />
         WDD 231 - Sehee Jang
