--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 src="images/seoul-small.webp"
                 alt="Seoul, South Korea"
                 width="200"
+                height="150"
               />
               <p>Lotte World Tower, Seoul</p>
             </div>
