--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
     <link rel="stylesheet" href="./styles/normalize.css" />
 
     <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
 
     <!-- script -->
     <script src="scripts/getdates.js" defer></script>
