fix: course-list ul에서 div로 바꿈

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <h2>Course Work</h2>
 
         <div class="card-cont">
-          <ul id="course-list">
+          <div id="course-list">
             <!-- 코스가 동적으로 렌더링 될 영역 -->
-          </ul>
+          </div>
         </div>
       </section>
 
