--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -20,23 +20,37 @@
     <!-- meta tags for Facebook-->
     <meta
       property="og:title"
-      content="Your Chamber's Name - Community & Business"
+      content="Timbuktu Chamber of Commerce - Community & Business"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.yourchambersite.com" />
+    <meta
+      property="og:url"
+      content="https://your-github-username.github.io/wdd231/chamber/directory.html"
+    />
+
+    <!-- script -->
+    <script src="scripts/script.js" defer></script>
   </head>
   <body>
     <header>
-      <h1>
-        <img src="" alt="logo" />
-        Timbuktu Chamber of Commerce
-      </h1>
+      <div class="logo-container">
+        <img src="images/logo.png" alt="Timbuktu Chamber of Commerce Logo" />
+        <div class="business-name">
+          <p class="bs-1">Timbuktu</p>
+          <p class="bs-2">Chamber of Commerce</p>
+        </div>
+      </div>
 
-      <nav>
-        <a href="">Home</a>
-        <a href="">Directory</a>
-        <a href="">Join</a>
-        <a href="">Discover</a>
+      <div class="hamburger" id="hamburger">&#9776;</div>
+      <!-- 햄버거 버튼 추가 -->
+
+      <nav id="navbar">
+        <div class="nav-links">
+          <a href="#">Home</a>
+          <a href="#">Directory</a>
+          <a href="#">Join</a>
+          <a href="#">Discover</a>
+        </div>
       </nav>
     </header>
 
@@ -44,6 +58,7 @@
       <section class="slider">
         <img src="" alt="" /><button>Keynote Tickets</button>
       </section>
+
       <section>
         <h1>Home</h1>
         <div class="contents">
@@ -51,18 +66,17 @@
           <div class="content weather"><h2>Current Weather</h2></div>
           <div class="content forecast"><h2>Weather Forecast</h2></div>
         </div>
-        <div class="business-cards">
-          <div class="business-card">
-            <h2>Business Name</h2>
-            <p class="" business-tag>Business Tag Line</p>
-            <img src="" alt="" />
-            <p><bold>Email: </bold></p>
-            <p><bold>Phone: </bold></p>
-            <p><bold>URL: </bold></p>
-          </div>
-          <div class="business-card"></div>
-          <div class="business-card"></div>
+      </section>
+
+      <section>
+        <div class="menu">
+          <button id="grid">⏹️Grid</button>
+          <button id="list">📄List</button>
         </div>
+
+        <article class="grid">
+          <div class="business-cards" id="business-cards"></div>
+        </article>
       </section>
     </main>
     <footer>
@@ -73,7 +87,17 @@
           Timbuktu, Mali 999
         </p>
       </div>
-
+      <div class="social-media">
+        <a href=""><img src="" alt="" />Youtube</a>
+        <a href=""><img src="" alt="" />Twitter</a>
+        <a href=""><img src="" alt="" />Indeed</a>
+      </div>
+      <div class="developer-info">
+        <p>WDD231 Class Project</p>
+        <p>Developed by Sehee Jang</p>
+        <p>©2024 Timbuktu Chamber of Commerce</p>
+        <p>Last modified: <span id="last-modified"></span></p>
+      </div>
     </footer>
   </body>
 </html>
