--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WDD 231 - Web Frontend Development I - Sehee Jang</title>
     <meta
@@ -27,6 +27,8 @@
       property="og:url"
       content="https://your-github-username.github.io/wdd231/chamber/directory.html"
     />
+    <meta property="og:image" content="./images/chamber-thumbnail.png" />
+
 
     <!-- script -->
     <script src="scripts/script.js" defer></script>
