add: main-slider, social-media images

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WDD 231 - Web Frontend Development I - Sehee Jang</title>
+    <title>Timbuktu Chamber of Commerce Directory - Sehee Jang</title>
     <meta
       name="description"
-      content="WDD231 - Web Frontend Development I | Sehee Jang | Chamber Website"
+      content="Timbuktu Chamber of Commerce - Explore the local business directory and community initiatives in Timbuktu."
     />
     <meta name="author" content="Sehee Jang" />
 
@@ -28,7 +28,6 @@
       content="https://your-github-username.github.io/wdd231/chamber/directory.html"
     />
     <meta property="og:image" content="./images/chamber-thumbnail.png" />
-
 
     <!-- script -->
     <script src="scripts/script.js" defer></script>
@@ -58,7 +57,10 @@
 
     <main>
       <section class="slider">
-        <img src="" alt="" /><button>Keynote Tickets</button>
+        <img
+          src="./images/Timbuktu-slider-image.jpg"
+          alt="slider-image"
+        /><button>Keynote Tickets</button>
       </section>
 
       <section>
@@ -90,9 +92,18 @@
         </p>
       </div>
       <div class="social-media">
-        <a href=""><img src="" alt="" />Youtube</a>
-        <a href=""><img src="" alt="" />Twitter</a>
-        <a href=""><img src="" alt="" />Indeed</a>
+        <a href="#" class="social-icon youtube"
+          ><img src="./images/logo-youtube.png" alt="Youtube Logo" />Youtube</a
+        >
+        <a href="#" class="social-icon twitter"
+          ><img
+            src="./images/logo-linkedin.png"
+            alt="Linkedin Logo"
+          />Twitter</a
+        >
+        <a href="#" class="social-icon indeed"
+          ><img src="./images/logo-facebook.png" alt="Indeed Logo" />Facebook</a
+        >
       </div>
       <div class="developer-info">
         <p>WDD231 Class Project</p>
