fix: meta og tag

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -25,9 +25,12 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://your-github-username.github.io/wdd231/chamber/directory.html"
+      content="https://sehee-jang.github.io/wdd231/chamber/directory.html"
     />
-    <meta property="og:image" content="./images/chamber-thumbnail.png" />
+    <meta
+      property="og:image"
+      content="https://sehee-jang.github.io/wdd231/chamber/images/Timbuktu-meta-og-image.jpg"
+    />
 
     <!-- script -->
     <script src="scripts/script.js" defer></script>
