modify: meta og tag

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timbuktu Chamber of Commerce Directory - Sehee Jang</title>
     <meta
@@ -18,19 +18,12 @@
     <link rel="stylesheet" href="./styles/normalize.css" />
 
     <!-- meta tags for Facebook-->
-    <meta
-      property="og:title"
-      content="Timbuktu Chamber of Commerce - Community & Business"
-    />
+    <meta property="og:title" content="Timbuktu Chamber of Commerce - Community & Business" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://sehee-jang.github.io/wdd231/chamber/directory.html"
-    />
-    <meta
-      property="og:image"
-      content="https://sehee-jang.github.io/wdd231/chamber/images/Timbuktu-meta-og-image.jpg"
-    />
+    <meta property="og:url" content="https://sehee-jang.github.io/wdd231/chamber/directory.html"/>
+    <meta property="og:image" content="https://sehee-jang.github.io/wdd231/chamber/images/Timbuktu-meta-og-image.jpg" />
+    <meta property="og:description" content="Discover local businesses in Timbuktu. Find bakeries, bookstores, fitness centers, and more, complete with contact information and descriptions." />
+
 
     <!-- script -->
     <script src="scripts/script.js" defer></script>
