add: calculateTotalCredits, calculateCompletedCredits functions

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WDD 231 - Web Frontend Development I - Sehee Jang</title>
     <meta
@@ -16,9 +16,13 @@
     <link rel="stylesheet" href="./styles/normalize.css" />
 
     <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- script -->
     <script src="scripts/getdates.js" defer></script>
@@ -50,6 +54,10 @@
       <section class="card content1">
         <h2>Course Work</h2>
 
+        <div id="total-course-credits">
+          <!-- 전체 학점이 보여질 영역 -->
+        </div>
+
         <div class="card-cont">
           <div id="course-list">
             <!-- 코스가 동적으로 렌더링 될 영역 -->
@@ -76,7 +84,7 @@
 
       <section class="card content3">
         <h2>Web and Computer Programming Certificate</h2>
-
+        <div id="total-credits"></div>
         <div class="card-cont">
           <div class="categories">
             <div class="category">All</div>
