--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -35,11 +35,9 @@
       property="og:description"
       content="Discover local businesses in Timbuktu. Find bakeries, bookstores, fitness centers, and more, complete with contact information and descriptions."
     />
-
-    <!-- script -->
-    <script src="scripts/script.js" defer></script>
   </head>
   <body>
+    <!-- Header -->
     <header>
       <div class="logo-container">
         <img src="images/logo.png" alt="Timbuktu Chamber of Commerce Logo" />
@@ -54,8 +52,8 @@
 
       <nav id="navbar">
         <div class="nav-links">
-          <a href="#">Home</a>
-          <a href="#">Directory</a>
+          <a href="./index.html">Home</a>
+          <a href="./directory.html">Directory</a>
           <a href="#">Join</a>
           <a href="#">Discover</a>
         </div>
@@ -63,6 +61,7 @@
     </header>
 
     <main>
+      <!-- Hero Section -->
       <section class="hero">
         <img
           src="./images/Timbuktu-slider-image.jpg"
@@ -70,26 +69,52 @@
         /><button>Keynote Tickets</button>
       </section>
 
+      <!-- Contents -->
       <section>
         <h1>Home</h1>
         <div class="contents">
-          <div class="content events"><h2>Events</h2></div>
-          <div class="content weather"><h2>Current Weather</h2></div>
-          <div class="content forecast"><h2>Weather Forecast</h2></div>
+          <!-- Events -->
+          <div class="content events">
+            <h2>Events</h2>
+          </div>
+
+          <!-- Current Weather -->
+          <div class="content weather">
+            <h2>Current Weather</h2>
+            <p>
+              The current temperature in Timbuktu is
+              <span id="current-temp"></span>
+            </p>
+            <figure>
+              <img id="weather-icon" src="" alt="" />
+              <figcaption></figcaption>
+            </figure>
+          </div>
+
+          <!-- Weather Forecast -->
+          <div class="content forecast">
+            <h2>Weather Forecast</h2>
+            <div id="forecast-container"></div>
+          </div>
         </div>
       </section>
 
+      <!-- Business Cards -->
       <section>
+        <!-- Buttons -->
         <div class="menu">
           <button id="grid">⏹️Grid</button>
           <button id="list">📄List</button>
         </div>
 
+        <!-- Cards -->
         <article class="grid">
           <div class="business-cards" id="business-cards"></div>
         </article>
       </section>
     </main>
+
+    <!-- Footer -->
     <footer>
       <div class="business-info">
         <p>Timbuktu Chamber of Commerce</p>
@@ -119,5 +144,9 @@
         <p>Last modified: <span id="last-modified"></span></p>
       </div>
     </footer>
+
+    <!-- script -->
+    <script src="scripts/script.js" defer></script>
+    <script src="scripts/weather.js" defer></script>
   </body>
 </html>
