--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,7 +67,7 @@
 
       <!-- Call to Action -->
       <div class="cta-container">
-        <h2 class="cta-title">Join the Chamber of Commerce</h2>
+        <h1 class="cta-title">Join the Chamber of Commerce</h1>
         <p class="cta-description">
           Become a member today and enjoy exclusive benefits!
         </p>
@@ -107,7 +107,7 @@
               <span id="current-temp"></span>
             </p>
             <figure>
-              <img id="weather-icon" src="" alt="" />
+              <img id="weather-icon" alt="Weather icon" />
               <figcaption></figcaption>
             </figure>
           </div>
