add: businessCard.js

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -147,6 +147,7 @@
 
     <!-- script -->
     <script src="scripts/script.js" defer></script>
+    <script src="scripts/businessCard.js" defer></script>
     <script src="scripts/weather.js" defer></script>
   </body>
 </html>
