fix: button css

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -103,8 +103,8 @@
       <section>
         <!-- Buttons -->
         <div class="menu">
-          <button id="grid">⏹️Grid</button>
-          <button id="list">📄List</button>
+          <button id="grid">Grid</button>
+          <button id="list">List</button>
         </div>
 
         <!-- Cards -->
