--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -86,7 +86,7 @@
               <span id="current-temp"></span>
             </p>
             <figure>
-              <img id="weather-icon" src="" alt="" />
+              <img id="weather-icon" src="https://openweathermap.org" alt="weather-icon" />
               <figcaption></figcaption>
             </figure>
           </div>
