--- a/chamber/join.html
+++ b/chamber/join.html
@@ -210,6 +210,6 @@
       </div>
     </div>
 
-    <script src="join.js"></script>
+    <script src="./scripts/join.js"></script>
   </body>
 </html>
